<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeFragmentUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ViewFlipper
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:autoStart="true"
            android:background="@drawable/border1"
            android:flipInterval="3000"
            android:inAnimation="@android:anim/slide_in_left"
            android:outAnimation="@android:anim/slide_out_right">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:contentDescription="@string/banner1"
                android:src="@drawable/bannerhomeuser1" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:contentDescription="@string/banner2"
                android:src="@drawable/bannerhomeuser2" />
        </ViewFlipper>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <!--        <TextView-->
                <!--            android:layout_width="match_parent"-->
                <!--            android:layout_height="match_parent"-->
                <!--            android:gravity="center"-->
                <!--            android:text="Home Fragment"-->
                <!--            android:textSize="50sp"-->
                <!--            android:textStyle="bold" />-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvBicycle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:elevation="8dp"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:background="@color/white"
                                android:contentDescription="@string/bicycle"
                                android:src="@drawable/bicycle3" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/yellow"
                                android:gravity="center"
                                android:text="@string/bicycle"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvScooter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_marginStart="25dp"
                        android:elevation="8dp"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:background="@color/white"
                                android:contentDescription="@string/scooter"
                                android:src="@drawable/scooter3_1" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/yellow"
                                android:gravity="center"
                                android:text="@string/scooter"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvBike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:elevation="8dp"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:background="@color/white"
                                android:contentDescription="@string/bike"
                                android:src="@drawable/bike2" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/yellow"
                                android:gravity="center"
                                android:text="@string/bike"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvCar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:elevation="8dp"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:background="@color/white"
                                android:contentDescription="@string/car"
                                android:src="@drawable/car" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/yellow"
                                android:gravity="center"
                                android:text="@string/car"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>